--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,6 +1,6 @@
-=simple_form_for @article do |f|
-	f.input :title
-	f.input :content
+= simple_form_for @article do |f|
+	=f.input :title
+	=f.input :content
 	%br/
-	f.submit
+	=f.submit
 	
