--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,9 +1,10 @@
 -@articles.each do |article|
-	%h2=article.title
+	%h2=link_to article.title, article
 	%p 
 	Published at	
 	=article.created_at.strftime('%b %d, %y')
 	%br/
 	%p=truncate(article.content, length: 200)
 
-=link_to "New Article", new_article_path
+-if user_signed_in?
+	=link_to "New Article", new_article_path
